--- a/platforms/browser/www/index.html
+++ b/platforms/browser/www/index.html
@@ -12,3 +12,13 @@
   <script src="bundle.js"></script>
 </body>
 </html>
+<!-- List of plugins to be added 
+
+    1) Facebook 
+    2) Google Plus
+    3) Social Share
+    4) Google Analytics
+    5) Clevertap 
+    
+
+ -->
