--- a/platforms/ios/www/index.html
+++ b/platforms/ios/www/index.html
@@ -8,7 +8,17 @@
 </head>
 
 <body>
-  <div id="root"></div>
+  <div id="app"></div>
   <script src="bundle.js"></script>
 </body>
 </html>
+<!-- List of plugins to be added 
+
+    1) Facebook 
+    2) Google Plus
+    3) Social Share
+    4) Google Analytics
+    5) Clevertap 
+    
+
+ -->
