--- a/www/index.html
+++ b/www/index.html
@@ -9,6 +9,7 @@
 
 <body>
   <div id="app"></div>
+  <!-- <script src="index.js " type="text/javascript"></script> -->
   <script src="bundle.js"></script>
 </body>
 </html>
