--- a/www/index.html
+++ b/www/index.html
@@ -1,25 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8" />
-  <link href="main.css" rel='stylesheet' type='text/css'>
-  <script type="text/javascript" src="cordova.js"></script>
-  <title>Zenparent</title>
-</head>
+  <head>
+    <meta charset="utf-8" />
+    <link href="main.css" rel='stylesheet' type='text/css'>
+    <script type="text/javascript" src="cordova.js"></script>
+    <title>Zenparent</title>
+  </head>
 
-<body>
-  <div id="app"></div>
-  <!-- <script src="index.js " type="text/javascript"></script> -->
-  <script src="bundle.js"></script>
-</body>
+  <body>
+    <div id="app"></div>
+    <script src="index.js" type="text/javascript"></script>
+    <script src="bundle.js" type="text/javascript"></script>
+  </body>
+
 </html>
-<!-- List of plugins to be added 
-
-    1) Facebook 
-    2) Google Plus
-    3) Social Share
-    4) Google Analytics
-    5) Clevertap 
-    
-
- -->
